[gd_scene load_steps=23 format=3 uid="uid://yvk8avajcl0x"]

[ext_resource type="PackedScene" uid="uid://d0ytcmdplhvb0" path="res://Scenes/player.tscn" id="1_7w2ly"]
[ext_resource type="Script" path="res://Scripts/World/world.gd" id="1_ir2i4"]
[ext_resource type="Texture2D" uid="uid://c6shda1m4lm7s" path="res://Assets/Background/plx-1.png" id="1_xtrdk"]
[ext_resource type="Script" path="res://Scripts/World/ParallaxBackground.gd" id="2_4x5qc"]
[ext_resource type="Texture2D" uid="uid://i66hd2k7gphm" path="res://Assets/Background/plx-2.png" id="2_g7lse"]
[ext_resource type="Texture2D" uid="uid://b5kptoy0oxd7v" path="res://Assets/Background/plx-3.png" id="3_fxnoe"]
[ext_resource type="Texture2D" uid="uid://dlh2ye7ia5xr1" path="res://Assets/Background/plx-4.png" id="4_3hfcp"]
[ext_resource type="Texture2D" uid="uid://b8bhqfshv2peo" path="res://Assets/Background/plx-5.png" id="5_i5k87"]
[ext_resource type="Texture2D" uid="uid://8620qvdhob71" path="res://Assets/Tiles/jungle tileset.png" id="8_lxxyj"]
[ext_resource type="PackedScene" uid="uid://yyx8p00wwhyk" path="res://Scenes/score.tscn" id="10_3v6o7"]
[ext_resource type="Script" path="res://Scripts/World/enemy_spawner.gd" id="10_8ndnu"]
[ext_resource type="Script" path="res://Scripts/World/level_up_timer.gd" id="11_3wuua"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="11_nbut5"]
[ext_resource type="Script" path="res://Scripts/World/game_paused_state.gd" id="12_orwkg"]
[ext_resource type="PackedScene" uid="uid://xy4u1b22qivf" path="res://Scenes/start_screen.tscn" id="13_6sjma"]
[ext_resource type="Script" path="res://Scripts/World/game_playing_state.gd" id="13_qmuce"]
[ext_resource type="Script" path="res://Scripts/World/game_over_state.gd" id="14_b2dcy"]
[ext_resource type="PackedScene" uid="uid://bdbjgjkc0a816" path="res://Scenes/game_over_screen.tscn" id="14_huqhd"]
[ext_resource type="AudioStream" uid="uid://bws5duuv443nd" path="res://Assets/Ludum Dare 28 - Track 7.wav" id="15_35ovu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4wp36"]
texture = ExtResource("8_lxxyj")
19:1/0 = 0
21:1/0 = 0
25:1/0 = 0
27:1/0 = 0
36:1/0 = 0
38:1/0 = 0
41:1/0 = 0
43:1/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
10:2/0 = 0
11:2/0 = 0
13:2/0 = 0
15:2/0 = 0
19:2/0 = 0
21:2/0 = 0
25:2/0 = 0
27:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
10:3/0 = 0
11:3/0 = 0
15:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
36:3/0 = 0
38:3/0 = 0
41:3/0 = 0
43:3/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
35:4/0 = 0
36:4/0 = 0
37:4/0 = 0
38:4/0 = 0
39:4/0 = 0
41:4/0 = 0
42:4/0 = 0
43:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
15:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
36:5/0 = 0
38:5/0 = 0
41:5/0 = 0
43:5/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
10:6/0 = 0
11:6/0 = 0
15:6/0 = 0
19:6/0 = 0
21:6/0 = 0
25:6/0 = 0
27:6/0 = 0
10:7/0 = 0
11:7/0 = 0
19:7/0 = 0
21:7/0 = 0
25:7/0 = 0
27:7/0 = 0
33:7/0 = 0
34:7/0 = 0
35:7/0 = 0
36:7/0 = 0
37:7/0 = 0
41:7/0 = 0
42:7/0 = 0
43:7/0 = 0
44:7/0 = 0
45:7/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
16:8/0 = 0
17:8/0 = 0
34:8/0 = 0
36:8/0 = 0
41:8/0 = 0
42:8/0 = 0
43:8/0 = 0
44:8/0 = 0
45:8/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
25:9/0 = 0
26:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
33:9/0 = 0
34:9/0 = 0
35:9/0 = 0
36:9/0 = 0
37:9/0 = 0
41:9/0 = 0
42:9/0 = 0
44:9/0 = 0
45:9/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
10:10/0 = 0
11:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
29:10/0 = 0
31:10/0 = 0
41:10/0 = 0
42:10/0 = 0
43:10/0 = 0
44:10/0 = 0
45:10/0 = 0
10:11/0 = 0
11:11/0 = 0
16:11/0 = 0
17:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
25:11/0 = 0
26:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
41:11/0 = 0
42:11/0 = 0
43:11/0 = 0
44:11/0 = 0
45:11/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
27:13/0 = 0
28:13/0 = 0
30:13/0 = 0
31:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
19:14/0 = 0
20:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
30:14/0 = 0
31:14/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
12:15/0 = 0
13:15/0 = 0
16:15/0 = 0
17:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
26:15/0 = 0
27:15/0 = 0
44:15/0 = 0
12:16/0 = 0
13:16/0 = 0
16:16/0 = 0
17:16/0 = 0
31:16/0 = 0
34:16/0 = 0
35:16/0 = 0
37:16/0 = 0
38:16/0 = 0
43:16/0 = 0
44:16/0 = 0
45:16/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
19:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
30:17/0 = 0
31:17/0 = 0
32:17/0 = 0
34:17/0 = 0
35:17/0 = 0
36:17/0 = 0
37:17/0 = 0
38:17/0 = 0
42:17/0 = 0
43:17/0 = 0
44:17/0 = 0
45:17/0 = 0
46:17/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
25:18/0 = 0
27:18/0 = 0
31:18/0 = 0
35:18/0 = 0
36:18/0 = 0
37:18/0 = 0
43:18/0 = 0
44:18/0 = 0
45:18/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
34:19/0 = 0
35:19/0 = 0
36:19/0 = 0
37:19/0 = 0
38:19/0 = 0
44:19/0 = 0
34:20/0 = 0
35:20/0 = 0
37:20/0 = 0
38:20/0 = 0

[sub_resource type="TileSet" id="TileSet_emo24"]
sources/0 = SubResource("TileSetAtlasSource_4wp36")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a13wg"]
size = Vector2(650, 31)

[node name="World" type="Node2D"]
process_mode = 3
script = ExtResource("1_ir2i4")

[node name="Pauseable" type="Node" parent="."]
process_mode = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="Pauseable"]
script = ExtResource("2_4x5qc")

[node name="ParallaxLayer0" type="ParallaxLayer" parent="Pauseable/ParallaxBackground" groups=["ParallaxLayers"]]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(480, 0)

[node name="Sprite2D" type="Sprite2D" parent="Pauseable/ParallaxBackground/ParallaxLayer0"]
scale = Vector2(1.25, 1.25)
texture = ExtResource("1_xtrdk")
centered = false

[node name="ParallaxLayer1" type="ParallaxLayer" parent="Pauseable/ParallaxBackground" groups=["ParallaxLayers"]]
motion_scale = Vector2(0, 0)
motion_offset = Vector2(10, 0)
motion_mirroring = Vector2(480, 0)

[node name="Sprite2D" type="Sprite2D" parent="Pauseable/ParallaxBackground/ParallaxLayer1"]
texture_filter = 3
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_g7lse")
centered = false

[node name="ParallaxLayer2" type="ParallaxLayer" parent="Pauseable/ParallaxBackground" groups=["ParallaxLayers"]]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(480, 0)

[node name="Sprite2D" type="Sprite2D" parent="Pauseable/ParallaxBackground/ParallaxLayer2"]
texture_filter = 3
scale = Vector2(1.25, 1.25)
texture = ExtResource("3_fxnoe")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="Pauseable/ParallaxBackground" groups=["ParallaxLayers"]]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(480, 0)

[node name="Sprite2D" type="Sprite2D" parent="Pauseable/ParallaxBackground/ParallaxLayer3"]
texture_filter = 3
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_3hfcp")
centered = false

[node name="ParallaxLayer4" type="ParallaxLayer" parent="Pauseable/ParallaxBackground" groups=["ParallaxLayers"]]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(480, 0)

[node name="Sprite2D" type="Sprite2D" parent="Pauseable/ParallaxBackground/ParallaxLayer4"]
texture_filter = 3
scale = Vector2(1.25, 1.25)
texture = ExtResource("5_i5k87")
centered = false

[node name="ParallaxLayer5" type="ParallaxLayer" parent="Pauseable/ParallaxBackground" groups=["ParallaxLayers"]]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(480, 0)

[node name="TileMap" type="TileMap" parent="Pauseable/ParallaxBackground/ParallaxLayer5"]
texture_filter = 5
tile_set = SubResource("TileSet_emo24")
format = 2
layer_0/tile_data = PackedInt32Array(917504, 393216, 2, 917505, 393216, 2, 917506, 393216, 2, 917507, 393216, 2, 917508, 393216, 2, 917509, 393216, 2, 917510, 393216, 2, 917511, 393216, 2, 917512, 393216, 2, 917513, 393216, 2, 917514, 393216, 2, 917515, 393216, 2, 917516, 393216, 2, 917517, 393216, 2, 917518, 393216, 2, 917519, 393216, 2, 917520, 393216, 2, 917521, 393216, 2, 917522, 393216, 2, 917523, 393216, 2, 917524, 393216, 2, 917525, 393216, 2, 917526, 393216, 2, 917527, 393216, 2, 917528, 393216, 2, 917529, 393216, 2, 917530, 393216, 2, 917531, 393216, 2, 917532, 393216, 2, 917533, 393216, 2, 983040, 393216, 3, 983041, 393216, 3, 983042, 393216, 3, 983043, 393216, 3, 983044, 393216, 3, 983045, 393216, 3, 983046, 393216, 3, 983047, 393216, 3, 983048, 393216, 3, 983049, 393216, 3, 983050, 393216, 3, 983051, 393216, 3, 983052, 393216, 3, 983053, 393216, 3, 983054, 393216, 3, 983055, 393216, 3, 983056, 393216, 3, 983057, 393216, 3, 983058, 393216, 3, 983059, 393216, 3, 983060, 393216, 3, 983061, 393216, 3, 983062, 393216, 3, 983063, 393216, 3, 983064, 393216, 3, 983065, 393216, 3, 983066, 393216, 3, 983067, 393216, 3, 983068, 393216, 3, 983069, 393216, 3, 1048584, 393216, 4, 1048585, 393216, 4, 1048586, 393216, 4, 1048587, 393216, 4, 1048576, 393216, 4, 1048577, 393216, 4, 1048578, 393216, 4, 1048579, 393216, 4, 1048580, 393216, 4, 1048581, 393216, 4, 1048582, 393216, 4, 1048583, 393216, 4, 1048588, 393216, 4, 1048589, 393216, 4, 1048590, 393216, 4, 1048591, 393216, 4, 1048592, 393216, 4, 1048593, 393216, 4, 1048594, 393216, 4, 1048595, 393216, 4, 1048596, 393216, 4, 1048597, 393216, 4, 1048598, 393216, 4, 1048599, 393216, 4, 1048600, 393216, 4, 1048601, 393216, 4, 1048602, 393216, 4, 1048603, 393216, 4, 1048604, 393216, 4, 1048605, 393216, 4)

[node name="StaticBody2D" type="StaticBody2D" parent="Pauseable"]
position = Vector2(164, 247)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pauseable/StaticBody2D"]
position = Vector2(161, -5.5)
shape = SubResource("RectangleShape2D_a13wg")

[node name="EnemySpawner" type="Node" parent="Pauseable"]
script = ExtResource("10_8ndnu")

[node name="Score" parent="Pauseable" instance=ExtResource("10_3v6o7")]

[node name="LevelUpTimer" type="Timer" parent="Pauseable"]
wait_time = 20.0
script = ExtResource("11_3wuua")

[node name="Player" parent="." instance=ExtResource("1_7w2ly")]
unique_name_in_owner = true
position = Vector2(76, 211)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartScreen" parent="CanvasLayer" instance=ExtResource("13_6sjma")]
offset_left = -101.5
offset_top = -7.5
offset_right = 101.5
offset_bottom = 7.5

[node name="GameOverScreen" parent="CanvasLayer" instance=ExtResource("14_huqhd")]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_35ovu")
volume_db = -20.0
autoplay = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("11_nbut5")
state = NodePath("GamePausedState")

[node name="GamePausedState" type="Node" parent="StateMachine"]
script = ExtResource("12_orwkg")

[node name="GamePlayingState" type="Node" parent="StateMachine"]
script = ExtResource("13_qmuce")

[node name="GameOverState" type="Node" parent="StateMachine"]
script = ExtResource("14_b2dcy")

[connection signal="timeout" from="Pauseable/LevelUpTimer" to="Pauseable/LevelUpTimer" method="_on_timeout"]
[connection signal="play_again" from="CanvasLayer/GameOverScreen" to="." method="_on_game_over_screen_play_again"]
